Update JavaCompiler.java